formsflow-admin-api/infra/dev/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-admin
  namespace : forms-flow-admin
  labels:
    app.kubernetes.io/name: formsflowadmin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: formsflowadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: formsflowadmin
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: formsflowadmin
          image: sofiamunicipalitydigitall/forms-flow-admin:latest
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 1001
         # command: [ "/bin/bash", "-c", "--" ]
         # args: [ "while true; do sleep 3600; done;" ]
          ports:
            - containerPort: 5000
              name: http-api
              protocol: TCP
